1.通知消息接口完成 2.todo: 重构通知消息